@@ -2,8 +2,9 @@ package site.markhenrick.adventofcode.y2021;
 
 import site.markhenrick.adventofcode.common.StringUtil;
 
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.stream.Collectors;
+import java.util.List;
 
 class Day03 {
 	private static final int INT_BIT_SIZE = 4 * 8;
@@ -13,7 +14,7 @@ class Day03 {
 		assert width <= INT_BIT_SIZE;
 		var acc = new int[width];
 		Arrays.fill(acc, 0);
-		var lines = StringUtil.LINE_SPLITTER.apply(input).collect(Collectors.toList());
+		var lines = StringUtil.LINE_SPLITTER.apply(input).toList();
 		var finalAcc = lines.stream() // will probably actually be the same pointer as acc
 			.reduce(acc, Day03::reducer, Day03::combiner);
 		var height = lines.size();
@@ -22,6 +23,40 @@ class Day03 {
 		var mask = Integer.MAX_VALUE >> (INT_BIT_SIZE - width);
 		var epsilon = epsilonWithExtra1s & mask;
 		return gamma * epsilon;
+	}
+
+	static int part2(String input) {
+		var lines = StringUtil.LINE_SPLITTER.apply(input).toList();
+		return lifeSupportRating(lines, false) * lifeSupportRating(lines, true);
+	}
+
+	static int lifeSupportRating(List<String> lines, boolean isCo2) {
+		assert !lines.isEmpty();
+		var width = lines.get(0).length();
+		assert width <= INT_BIT_SIZE;
+		for (int i = 0; lines.size() > 1; i++) {
+			assert i < width;
+			var ones = new ArrayList<String>(lines.size());
+			var zeroes = new ArrayList<String>(lines.size());
+			for (var line : lines) {
+				if (line.charAt(i) == '1') {
+					ones.add(line);
+				} else {
+					zeroes.add(line);
+				}
+			}
+			List<String> mostCommon;
+			List<String> leastCommon;
+			if (ones.size() >= zeroes.size()) {
+				mostCommon = ones;
+				leastCommon = zeroes;
+			} else {
+				mostCommon = zeroes;
+				leastCommon = ones;
+			}
+			lines = isCo2 ? leastCommon : mostCommon;
+		}
+		return Integer.parseInt(lines.get(0), 2);
 	}
 
 	// IMPURE - Mutates acc
